--- a/animacao.html
+++ b/animacao.html
@@ -35,7 +35,7 @@
 <body>
   <h1>Animação</h1>
   <video controls style="width: 80%; max-width: 800px;">
-    <source src="videos/VIDEO FINAL 29-05.mp4" type="video/mp4">
+    <source src="VIDEO FINAL 29-05.mp4" type="video/mp4">
     O seu navegador não suporta vídeo.
   </video>
   <br>
