--- a/referencias.html
+++ b/referencias.html
@@ -18,17 +18,19 @@
     }
     .container {
       display: flex;
-      justify-content: center;
-      align-items: flex-start;
+      flex-direction: column;
+      align-items: center;
       margin: 40px;
-      gap: 40px;
     }
     .box {
       background-color: #1a1a1a;
       padding: 20px;
       border-radius: 10px;
-      width: 45%;
+      width: 80%;
+      max-width: 800px;
       box-sizing: border-box;
+      max-height: 400px;
+      overflow-y: auto;
     }
     .box h2 {
       font-size: 20px;
@@ -50,10 +52,6 @@
     a:hover {
       text-decoration: underline;
     }
-    .footer {
-      margin-top: 40px;
-      font-size: 14px;
-    }
     button {
       margin-top: 30px;
       padding: 10px 20px;
@@ -73,8 +71,9 @@
   <p><strong>Criadores:</strong> Dário Oliveira, Lucas Pirk e Mayan Goller</p>
   <div class="container">
     <div class="box">
-      <h2>Sons e Música</h2>
+      <h2>Sons, Música e Imagens</h2>
       <ul>
+        <li><a href="https://lifecooler.com/artigo/comer/casino-estoril/297927/" target="_blank">Casino Estoril - LifeCooler</a></li>
         <li><a href="https://www.youtube.com/watch?v=9pxNI2rafp4" target="_blank">Música de fundo</a></li>
         <li><a href="https://www.youtube.com/watch?v=0M0Q2xnQDFE" target="_blank">Ambiente noturno</a></li>
         <li><a href="https://www.youtube.com/watch?v=mPgGg4MJKKc" target="_blank">Passos</a></li>
@@ -87,12 +86,29 @@
         <li><a href="https://youtu.be/Yw7w_K3U-kg?si=DWK_Soh3jyeuzJzg" target="_blank">Pássaros</a></li>
         <li><a href="https://youtu.be/3-DVpITH8nU?si=l1MbotUB0uAGdQEM" target="_blank">Som de rio</a></li>
         <li><a href="https://youtu.be/8Eb0CUYOzIM?si=zmC-Y1GVgCppvEiX" target="_blank">Ambiente urbano</a></li>
-      </ul>
-    </div>
-    <div class="box">
-      <h2>Imagens</h2>
-      <ul>
-        <li><a href="https://lifecooler.com/artigo/comer/casino-estoril/297927/" target="_blank">Casino Estoril - LifeCooler</a></li>
+        <li><a href="https://www.youtube.com/watch?v=XJsy5jJ7Dp0" target="_blank">Som de passos</a></li>
+        <li><a href="https://www.youtube.com/watch?v=k3EUprslmyw" target="_blank">Ambiente de floresta</a></li>
+        <li><a href="https://www.youtube.com/watch?v=YRex1Udiybs" target="_blank">Chuva forte</a></li>
+        <li><a href="https://www.youtube.com/watch?v=i86MMmFan_Y" target="_blank">Vento forte</a></li>
+        <li><a href="https://www.youtube.com/watch?v=FNl9qQXDeog" target="_blank">Som de folhas secas</a></li>
+        <li><a href="https://www.youtube.com/watch?v=-xLjW-eXuSw" target="_blank">Ambiente noturno</a></li>
+        <li><a href="https://www.youtube.com/watch?v=7dAIddQIa3E" target="_blank">Pássaros cantando</a></li>
+        <li><a href="https://www.youtube.com/watch?v=Z8hCqE3dJkM" target="_blank">Som de rio</a></li>
+        <li><a href="https://www.youtube.com/watch?v=3GwjfUFyY6M" target="_blank">Ambiente urbano</a></li>
+        <li><a href="https://www.youtube.com/watch?v=i4CWrt4b5NU" target="_blank">Som de passos</a></li>
+        <li><a href="https://www.youtube.com/watch?v=4Rfh7GWxGxA" target="_blank">Ambiente de floresta</a></li>
+        <li><a href="https://www.youtube.com/watch?v=gXpDSMGGH3Q" target="_blank">Chuva forte</a></li>
+        <li><a href="https://www.youtube.com/watch?v=ZUo89fLdxHo" target="_blank">Vento forte</a></li>
+        <li><a href="https://www.youtube.com/watch?v=Xa2tDZxnm6w" target="_blank">Som de folhas secas</a></li>
+        <li><a href="https://www.youtube.com/shorts/hdiGaE2QWz0" target="_blank">Ambiente noturno</a></li>
+        <li><a href="https://www.youtube.com/watch?v=vNhs9CSI0Vc" target="_blank">Pássaros cantando</a></li>
+        <li><a href="https://www.youtube.com/watch?v=9zw6eZEBp30" target="_blank">Som de rio</a></li>
+        <li><a href="https://www.youtube.com/watch?v=TgZjYIPPe50" target="_blank">Ambiente urbano</a></li>
+        <li><a href="https://www.youtube.com/watch?v=GvXbEO5Kbgc" target="_blank">Som de passos</a></li>
+        <li><a href="https://www.youtube.com/watch?v=WVAXcHCfh2M" target="_blank">Ambiente de floresta</a></li>
+        <li><a href="https://www.youtube.com/watch?v=Ge2zHoXskC8" target="_blank">Chuva forte</a></li>
+        <li><a href="https://www.youtube.com/watch?v=0afvjj9bwbc" target="_blank">Vento forte</a></li>
+        <li><a href="https://www.youtube.com/watch?v=kzgljYZqtVU" target="_blank">Som de folhas secas</a></li>
       </ul>
     </div>
   </div>
